@@ -104,6 +104,12 @@ int mosquitto__check_keepalive(struct mosquitto *mosq)
 			pthread_mutex_unlock(&mosq->msgtime_mutex);
 		}else{
 #ifdef WITH_BROKER
+#  ifdef WITH_BRIDGE
+			if(mosq->bridge){
+				context__send_will(mosq);
+			}
+#  endif
+#endif
 			net__socket_close(mosq);
 #else
 			net__socket_close(mosq);
